--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <button id="submit">submit</button>
 
         </div>
+        <div class="overlay">
+            <div class="overlay-text">
+                <!-- Display answers here -->
+            </div>
+        </div>
+        
     </div>
     <script src="/index.js"></script>
 </body>
